src/test/deca/context/invalid/provided/invalide_class_08_Selection.deca
// Description : test sur l'utlisation d'une attribut à une variable de type prédéfinie.
// Sortie:
// ERROR : Invalide Type! (int) ,l'utilisation des attributs est valable seulement pour les classes.

{
    int x;
    x.y;
}
